@@ -280,7 +280,7 @@ FANN_EXTERNAL struct fann_train_data *FANN_API fann_read_train_from_file(const c
 FANN_EXTERNAL struct fann_train_data * FANN_API fann_create_train_from_callback(unsigned int num_data,
                                           unsigned int num_input,
                                           unsigned int num_output,
-                                          FANN_EXTERNAL void (FANN_API *user_function)( unsigned int,
+                                          void (FANN_API *user_function)( unsigned int,
                                                                  unsigned int,
                                                                  unsigned int,
                                                                  fann_type * ,
